<?xml version="1.0" encoding="UTF-8"?>

<!--
  ~ Copyright 2013 CoreMedia AG
  ~
  ~ This file is part of Joala.
  ~
  ~ Joala is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Joala is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Joala.  If not, see <http://www.gnu.org/licenses />.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>net.joala</groupId>
  <artifactId>joala-bom</artifactId>
  <version>3.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>Joala BOM</name>
  <description><![CDATA[
    This is the aggregator for the Joala project as well as the BOM (Bill of Materials) POM for Joala.
  ]]></description>
  <url>http://coremedia.github.com/joala</url>
  <inceptionYear>2011</inceptionYear>
  <organization>
    <name>CoreMedia GmbH</name>
    <url>http://coremedia.github.io/joala/</url>
  </organization>
  <licenses>
    <license>
      <name>GNU General Public License, Version 3</name>
      <url>http://www.gnu.org/licenses/gpl.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>mmichael</id>
      <name>Mark Michaelis</name>
      <email>mark.michaelis@coremedia.com</email>
      <organization>CoreMedia AG</organization>
      <organizationUrl>http://www.coremedia.com/</organizationUrl>
      <roles>
        <role>architect</role>
        <role>developer</role>
      </roles>
      <timezone>+1</timezone>
    </developer>
    <developer>
      <id>fwienber</id>
      <name>Frank Wienberg</name>
      <email>frank.wienberg@coremedia.com</email>
      <organization>CoreMedia AG</organization>
      <organizationUrl>http://www.coremedia.com/</organizationUrl>
      <roles>
        <role>developer</role>
      </roles>
      <timezone>+1</timezone>
    </developer>
    <developer>
      <id>okummer</id>
      <name>Olaf Kummer</name>
      <email>olaf.kummer@coremedia.com</email>
      <organization>CoreMedia AG</organization>
      <organizationUrl>http://www.coremedia.com/</organizationUrl>
      <roles>
        <role>developer</role>
      </roles>
      <timezone>+1</timezone>
    </developer>
    <developer>
      <id>cweitend</id>
      <name>Christian Weitendorf</name>
      <email>christian.weitendorf@coremedia.com</email>
      <organization>CoreMedia AG</organization>
      <organizationUrl>http://www.coremedia.com/</organizationUrl>
      <roles>
        <role>developer</role>
      </roles>
      <timezone>+1</timezone>
    </developer>
    <developer>
      <id>mwester</id>
      <name>Matthias Wester-Ebbinghaus</name>
      <email>matthias.wester-ebbinghaus@coremedia.com</email>
      <organization>CoreMedia AG</organization>
      <organizationUrl>http://www.coremedia.com/</organizationUrl>
      <roles>
        <role>developer</role>
      </roles>
      <timezone>+1</timezone>
    </developer>
  </developers>

  <modules>
    <module>parent</module>
    <module>thirdparty-bom</module>
    <module>thirdparty-test-bom</module>
  </modules>

  <scm>
    <connection>scm:git:git@github.com:CoreMedia/joala.git</connection>
    <developerConnection>scm:git:git@github.com:CoreMedia/joala.git</developerConnection>
    <tag>HEAD</tag>
    <url>https://github.com/CoreMedia/joala</url>
  </scm>
  <issueManagement>
    <system>GitHub</system>
    <url>https://github.com/CoreMedia/joala/issues</url>
  </issueManagement>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <maven.compiler.release>17</maven.compiler.release>
    <generated.sources.root>${project.build.directory}/generated-sources</generated.sources.root>
    <!-- Signals to ignore approved non-compile dependencies which are recognized as unused. -->
    <dependency.ignore.approved.noncompile>true</dependency.ignore.approved.noncompile>
    <dependency.fail.onwarning>true</dependency.fail.onwarning>
    <gpg.passphrase>UNSET</gpg.passphrase>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>joala-conditions</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>joala-expressions</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>joala-expressions-library</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>joala-matchers</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>joala-labs-data</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>joala-bdd</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>joala-testlets</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>joala-labs</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>joala-labs-net</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>joala-labs-junit</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>joala-time</artifactId>
        <version>${project.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>exec-maven-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <!-- see http://code.google.com/p/sortpom/ -->
        <!-- To start: mvn com.google.code.sortpom:maven-sortpom-plugin:sort -->
        <plugin>
          <groupId>com.google.code.sortpom</groupId>
          <artifactId>maven-sortpom-plugin</artifactId>
          <version>2.3.1</version>
          <configuration>
            <!-- POM Code Convention - http://maven.apache.org/developers/conventions/code.html#POM_Code_Convention -->
            <sortOrderFile>recommended_2008_06.xml</sortOrderFile>
            <createBackupFile>false</createBackupFile>
            <expandEmptyElements>false</expandEmptyElements>
            <sortDependencies>true</sortDependencies>
            <sortPlugins>false</sortPlugins>
            <keepBlankLines>true</keepBlankLines>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-antrun-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.3.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.11.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>3.6.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>3.1.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-enforcer-plugin</artifactId>
          <version>3.4.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-install-plugin</artifactId>
          <version>3.1.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>3.5.0</version>
          <configuration>
            <doclint>none</doclint>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.3.0</version>
          <configuration>
            <skipIfEmpty>true</skipIfEmpty>
            <archive>
              <addMavenDescriptor>false</addMavenDescriptor>
              <forced>false</forced>
              <manifestEntries>
                <Built-By>CoreMedia</Built-By>
                <Build-Jdk>${java.version}</Build-Jdk>
                <Implementation-Title>${project.name} - ${project.artifactId}</Implementation-Title>
                <Implementation-Version>${project.version}</Implementation-Version>
                <Implementation-Build>${maven.build.timestamp}</Implementation-Build>
                <Implementation-Vendor-Id>com.coremedia</Implementation-Vendor-Id>
                <Implementation-Vendor>CoreMedia AG</Implementation-Vendor>
                <X-Compile-Source-JDK>${maven.compiler.release}</X-Compile-Source-JDK>
                <X-Compile-Target-JDK>${maven.compiler.release}</X-Compile-Target-JDK>
              </manifestEntries>
            </archive>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>3.4.5</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-release-plugin</artifactId>
          <version>3.0.1</version>
          <configuration>
            <arguments>-Psonatype-oss-release -Dgpg.passphrase=${gpg.passphrase}</arguments>
            <autoVersionSubmodules>true</autoVersionSubmodules>
            <!--
            | if we don't do clean install javadoc aggregation will fail in release:perform because
            | aggregated javadoc for root project will run before the deploy goal of the submodules and therefore
            | also before the install of the submodules
            -->
            <preparationGoals>clean install</preparationGoals>
            <goals>deploy site-deploy</goals>
            <pushChanges>false</pushChanges>
            <localCheckout>true</localCheckout>
            <releaseProfiles>release</releaseProfiles>
            <tagNameFormat>joala-@{project.version}</tagNameFormat>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.3.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.12.1</version>
          <configuration>
            <generateSitemap>true</generateSitemap>
            <skipDeploy>true</skipDeploy>
          </configuration>
          <dependencies>
            <dependency>
              <!--
              | allows markdown syntax for site generation. To use it place files below
              | src/site/markdown/[filename].md
              -->
              <groupId>org.apache.maven.doxia</groupId>
              <artifactId>doxia-module-markdown</artifactId>
              <version>1.12.0</version>
            </dependency>
          </dependencies>
        </plugin>
        <plugin>
          <groupId>com.github.github</groupId>
          <artifactId>site-maven-plugin</artifactId>
          <version>0.12</version>
          <configuration>
            <server>github</server>
            <message>Site for ${project.artifactId}:${project.version}</message>
            <!-- The location where the site is uploaded -->
            <path>${project.distributionManagement.site.url}</path>
            <!-- Use merge or override the content -->
            <merge>true</merge>
          </configuration>
          <executions>
            <execution>
              <goals>
                <goal>site</goal>
              </goals>
              <!-- select the Maven phase in which the plugin will be executed -->
              <phase>site-deploy</phase>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>3.3.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.1.2</version>
          <configuration>
            <junitArtifactName>junit:junit</junitArtifactName>
            <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <!-- Make it available in IDE -->
        <groupId>com.google.code.sortpom</groupId>
        <artifactId>maven-sortpom-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <executions>
          <execution>
            <id>enforce</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireMavenVersion>
                  <version>3.8</version>
                </requireMavenVersion>
                <DependencyConvergence/>
                <requireNoRepositories>
                  <message>Best Practice is to never define repositories in pom.xml (use a repository manager instead)
                  </message>
                  <allowedRepositories>
                    <allowedRepository>sonatype-nexus-snapshots</allowedRepository>
                  </allowedRepositories>
                </requireNoRepositories>
                <requirePluginVersions>
                  <message>Best Practice is to always define plugin versions!</message>
                </requirePluginVersions>
                <requireUpperBoundDeps/>
                <bannedDependencies>
                  <message><![CDATA[
Joala tries to avoid having any of the following dependencies:

  * Logging frameworks different to slf4j because we recommend and use slf4j. Use
    appropriate slf4j bridges to support commons-logging etc. from thirdparty
    dependencies.
  * Alternative Hamcrest Implementations - as Joala uses Hamcrest Libraries for
    Matchers they collide with junit:junit prior to JUnit 4.11. The same applies
    to artifacts like mockito-all.
  * Joala Labs: Joala Labs are experimental and thus they must not leak into
    any transitive dependency inside the Joala project.
                  ]]></message>
                  <searchTransitive>true</searchTransitive>
                  <excludes>
                    <exclude>*:commons-logging</exclude>
                    <!-- Mockito-All: Collides with used hamcrest version. -->
                    <exclude>org.mockito:mockito-all</exclude>
                    <exclude>*:log4j</exclude>
                    <!-- Use junit instead; since JUnit 4.11 -->
                    <exclude>junit:junit-dep</exclude>
                    <!-- joala-labs must only be used internally -->
                    <exclude>${project.groupId}:joala-labs-junit:*:jar:compile</exclude>
                    <exclude>${project.groupId}:joala-labs-junit:*:jar:runtime</exclude>
                    <exclude>${project.groupId}:joala-labs-net:*:jar:compile</exclude>
                    <exclude>${project.groupId}:joala-labs-net:*:jar:runtime</exclude>
                    <exclude>${project.groupId}:joala-labs-data:*:jar:compile</exclude>
                    <exclude>${project.groupId}:joala-labs-data:*:jar:runtime</exclude>
                  </excludes>
                </bannedDependencies>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-site-plugin</artifactId>
        <executions>
          <execution>
            <id>attach-descriptor</id>
            <goals>
              <goal>attach-descriptor</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <!-- Deploy the web site -->
        <groupId>com.github.github</groupId>
        <artifactId>site-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <executions>
          <execution>
            <id>analyze-dependencies</id>
            <goals>
              <goal>analyze-only</goal>
            </goals>
            <configuration>
              <failOnWarning>${dependency.fail.onwarning}</failOnWarning>
            </configuration>
          </execution>
          <execution>
            <id>analyze-dependency-duplicates</id>
            <goals>
              <goal>analyze-duplicate</goal>
            </goals>
            <phase>verify</phase>
          </execution>
          <execution>
            <id>analyze-dependency-management</id>
            <goals>
              <goal>analyze-dep-mgt</goal>
            </goals>
            <phase>verify</phase>
            <configuration>
              <failBuild>${dependency.fail.onwarning}</failBuild>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

</project>
